// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TABLE[Email]: should create email to db 1`] = `
Array [
  Object {
    "bcc": null,
    "cc": null,
    "content": "<p>Hello there</p>",
    "date": "2013-10-07 08:23:19.120",
    "delivered": 0,
    "from": "1",
    "id": 1,
    "isDraft": 1,
    "isMuted": 0,
    "isTrash": 0,
    "key": "hdnfgdgsd",
    "preview": "Hello there",
    "s3Key": "hdnfgdgsd",
    "secure": 1,
    "subject": "Greetings",
    "threadId": "threadJ",
    "to": null,
    "unread": 1,
  },
]
`;

exports[`TABLE[Email]: should update email: isDraft 1`] = `
Array [
  Object {
    "bcc": null,
    "cc": null,
    "content": "<p>Hello there</p>",
    "date": "2013-10-07 08:23:19.120",
    "delivered": 0,
    "from": "1",
    "id": 1,
    "isDraft": 0,
    "isMuted": 0,
    "isTrash": 0,
    "key": "hdnfgdgsd",
    "preview": "Hello there",
    "s3Key": "hdnfgdgsd",
    "secure": 1,
    "subject": "Greetings",
    "threadId": "threadJ",
    "to": null,
    "unread": 1,
  },
]
`;

exports[`TABLE[Email]: should update email: isMuted 1`] = `
Array [
  Object {
    "bcc": null,
    "cc": null,
    "content": "<p>Hello there</p>",
    "date": "2013-10-07 08:23:19.120",
    "delivered": 0,
    "from": "1",
    "id": 1,
    "isDraft": 0,
    "isMuted": 1,
    "isTrash": 0,
    "key": "hdnfgdgsd",
    "preview": "Hello there",
    "s3Key": "hdnfgdgsd",
    "secure": 1,
    "subject": "Greetings",
    "threadId": "threadJ",
    "to": null,
    "unread": 1,
  },
]
`;
